tests/machine/x/c/load_yaml.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/load_yaml.c:72:3: error: unknown type name ‘map_string_int’
   72 |   map_string_int *data;
      |   ^~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/load_yaml.c: In function ‘list_map_string_int_create’:
/workspace/mochi/tests/machine/x/c/load_yaml.c:78:19: error: ‘map_string_int’ undeclared (first use in this function); did you mean ‘map_string_put’?
   78 |   l.data = cap ? (map_string_int *)malloc(sizeof(map_string_int) * cap) : NULL;
      |                   ^~~~~~~~~~~~~~
      |                   map_string_put
/workspace/mochi/tests/machine/x/c/load_yaml.c:78:19: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/load_yaml.c:78:35: error: expected expression before ‘)’ token
   78 |   l.data = cap ? (map_string_int *)malloc(sizeof(map_string_int) * cap) : NULL;
      |                                   ^
/workspace/mochi/tests/machine/x/c/load_yaml.c: At top level:
/workspace/mochi/tests/machine/x/c/load_yaml.c:81:62: error: unknown type name ‘map_string_int’; did you mean ‘map_string’?
   81 | static void list_map_string_int_push(list_map_string_int *l, map_string_int m) {
      |                                                              ^~~~~~~~~~~~~~
      |                                                              map_string
/workspace/mochi/tests/machine/x/c/load_yaml.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/load_yaml.c:212:3: error: unknown type name ‘list_Person’
  212 |   list_Person people = _load_json("../interpreter/valid/people.yaml");
      |   ^~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/load_yaml.c:212:24: error: incompatible types when initializing type ‘int’ using type ‘list_map_string’
  212 |   list_Person people = _load_json("../interpreter/valid/people.yaml");
      |                        ^~~~~~~~~~
/workspace/mochi/tests/machine/x/c/load_yaml.c:213:54: error: request for member ‘len’ in something not a structure or union
  213 |   list_adultsItem _t1 = list_adultsItem_create(people.len);
      |                                                      ^
/workspace/mochi/tests/machine/x/c/load_yaml.c:215:33: error: request for member ‘len’ in something not a structure or union
  215 |   for (int _t3 = 0; _t3 < people.len; _t3++) {
      |                                 ^
/workspace/mochi/tests/machine/x/c/load_yaml.c:216:22: error: request for member ‘data’ in something not a structure or union
  216 |     Person p = people.data[_t3];
      |                      ^

   1: #include <stdio.h>
